# ragbench

./: .env.example  README.md  docker-compose.yml  pyproject.toml
benchmarks/: sample.jsonl
results/: bench_runs_20260219_165634.jsonl  bench_runs_20260219_170151.jsonl  bench_runs_20260219_180506.jsonl  bench_summary_20260219_170151.csv  bench_summary_20260219_180506.csv  embedding_comparison_20260220_120016.csv  embedding_comparison_20260220_125114.csv  embedding_comparison_20260220_133815.csv  model_comparison_20260219_173025.csv  model_comparison_20260219_181049.csv  model_comparison_20260219_181954.csv  model_comparison_20260219_183219.csv  model_comparison_20260219_184730.csv  run_20260219_163229.json  threshold_sweep_20260219_192842.csv  threshold_sweep_20260219_200544.csv
scripts/: augment_corpus.py  dense_vs_rerank_demo.py  index_and_search_demo.py  reindex_demo_docs.py  reindex_from_jsonl.py  run_benchmark.py  run_embedding_comparison.py  run_model_comparison.py  run_threshold_sweep.py  test_qdrant.py
src/ragbench/bench/: schema.py
src/ragbench/embed/: local_provider.py  providers.py
src/ragbench/eval/: judge.py  pricing.py  refusal.py
src/ragbench/generation/: answer.py
src/ragbench/pipeline/: simple_rag.py
src/ragbench/rerank/: providers.py
src/ragbench/store/: qdrant_store.py
src/ragbench/utils/: run_schema.py
src/store/: qdrant_store.py
