[project]
name = "ragbench"
version = "0.1.0"
description = "Open-source RAG benchmarking framework."
requires-python = ">=3.10"
dependencies = [
  "qdrant-client>=1.9.0",
  "openai>=1.40.0",
  "tiktoken>=0.7.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "requests>=2.32.0",
  "tqdm>=4.66.0",
  "sentence-transformers>=3.0.0"
]

[project.scripts]
ragbench = "ragbench.cli:main"